[gd_scene load_steps=4 format=3 uid="uid://4fwi5nct0tap"]

[ext_resource type="PackedScene" uid="uid://dbj7cpyhvea1t" path="res://scenes/player/Player.tscn" id="1_u52ul"]
[ext_resource type="PackedScene" uid="uid://bvu1iy2u836rt" path="res://scenes/meteors/big_meteor.tscn" id="2_d028h"]
[ext_resource type="Script" uid="uid://dt1kd6xlmst2n" path="res://scripts/spawner.gd" id="3_t0hj8"]

[node name="level" type="Node2D"]

[node name="player" parent="." instance=ExtResource("1_u52ul")]
position = Vector2(258, 151)

[node name="big_meteor" parent="." instance=ExtResource("2_d028h")]
position = Vector2(261, 80)

[node name="spawner" type="Node2D" parent="."]
script = ExtResource("3_t0hj8")

[node name="spawn_timer" type="Timer" parent="spawner"]
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
enabled = false

[connection signal="timeout" from="spawner/spawn_timer" to="spawner" method="_on_spawn_timer_timeout"]
